# flight-simulator

./: CMakeLists.txt  Expression.h  GenFunc.cpp  GenFunc.h  README.md  details.txt  log.txt  main.cpp  makefile
Basic Commands/: AssertionCommand.cpp  AssertionCommand.h  CMakeLists.txt  Command.h  CommandExpression.cpp  CommandExpression.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DataReaderFromServer.h  DataReaderServer.cpp  DataReaderServer.h  DefineVarCommand.cpp  DefineVarCommand.h  Expression.h  GenFunc.cpp  GenFunc.h  IfCommand.cpp  IfCommand.h  Lexer.cpp  Lexer.h  LoopCommand.cpp  LoopCommand.h  OpenServerCommand.cpp  OpenServerCommand.h  PrintCommand.cpp  PrintCommand.h  SleepCommand.cpp  SleepCommand.h  commands.txt  commandsFactory.cpp  commandsFactory.h  connect.cpp  connect.h  main.cpp
algorithms/: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  DFS.cpp  DFS.h  Entry.h  ISearcher.h  Searcher.cpp  Searcher.h
commands/: AssertionCommand.cpp  AssertionCommand.h  Command.h  CommandExpression.cpp  CommandExpression.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DataReaderFromServer.cpp  DataReaderFromServer.h  DataReaderServer.h  DefineVarCommand.cpp  DefineVarCommand.h  IfCommand.cpp  IfCommand.h  Lexer.cpp  Lexer.h  LoopCommand.cpp  LoopCommand.h  OpenServerCommand.cpp  OpenServerCommand.h  PrintCommand.cpp  PrintCommand.h  ReadFromServer.cpp  ReadFromServer.h  SleepCommand.cpp  SleepCommand.h  commandsFactory.cpp  commandsFactory.h  connect.h
other/: GenFunc.h  (+1 more)
(+42 files in other folders)
